// -*- text -*-

  ChangeLog
  =========

This is a detailed list of ongoing changes.  Add changes to 
the top of this file.

Changes by R. Holmes on 22 Aug 2005
-----------------------------------

Changes to TaCutList.{cc,hh}, TaDataBase.cc, and VaEvent.{cc,hh} to
implement saturated monitor cuts.


Changes by R. Holmes on 12 Jul 2005
-----------------------------------

These are some changes to facilitate comparison of stripline and
cavity beamline monitors.

There's a rather arcane change to the prompt.pl user interface.  The
"for dummies" explanation is that the default behavior is to do two
dither and two regression analyses, one using a stripline config file
and one using a cavity config file.  However, the results are
summarized and displayed (using prompt.macro) only for the stripline
analysis, as before.  All sorts of other possibilities can be
specified using one or more --conf arguments; see murky details in the
comments.

While prompt.pl doesn't take advantage of it yet, prompt.macro and
open.macro have been modified so prompt.macro should be able to
handle cavity analysis results by specifying an optional third
argument, e.g. prompt (1234, 0, "cavity").


Changes by K. Paschke on  11 Oct 2004
--------------------------------------

Added new detector "devices" det_l, det_r, det_lo, det_hi, and det_all.
These provide the various sums of the 4 hydrogen detectors, with weights
as prescribed in the database detwts  field.  These weights should be set
as:

wt = 1/( raw_signal_size * (regressed_asym_rms)^2 )

The sums are recorded in the raw tree.  These sums are not "re-normalized" to
the sum of the weights (so this is a weighted sum, not a weighted average) to 
allow for the use of other combos with negative weights, if desired.
These sums are also not beam normalized in the raw tree.

For the pair tree, asymmetries are calculated for each of these sums exactly 
as if they were the standard detectors (this is implemented in TaStandardAna).